--- a/templates/home.html
+++ b/templates/home.html
@@ -1448,7 +1448,7 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                     <label for="location-daily" class="form-label">Địa điểm hoặc tên homestay</label>
                     <div class="location-selector">
                         <input type="text" class="form-control location-input" id="location-daily" name="location" 
-                               placeholder="Bạn muốn đi đâu?" autocomplete="off">
+                               placeholder="Nhập hoặc chọn địa điểm" autocomplete="off">
                         <div class="location-dropdown" id="location-dropdown-daily">
                             <!-- Options will be loaded dynamically from API -->
                         </div>
